# kappatan

./: .gitignore  Cargo.toml  README.md  build.rs  templates.toml
sql/: db_schema.sql  get_points.sql  get_template.sql  give_points.sql  list_commands.sql  set_template.sql  unset_template.sql
src/: commands.rs  error.rs  lib.rs  main.rs  util.rs
src/commands/: broadcaster.rs  command.rs  state.rs  user.rs
