[package]
name = "kappatan"
version = "0.1.0"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
alto_logger = { version = "0.3", features=["time"] }
anyhow      = "1.0"
futures     = "0.3"
log         = { version = "0.4" }
markings    = "0.4.0"
serde       = { version = "1.0", features = ["derive"] }
simple_env_load = "0.1.0"
sqlx = { version = "0.3", default-features = false, features = ["macros", "sqlite", "runtime-tokio"] }
thiserror   = "1.0"
tokio       = { version="0.2", default-features=false, features=["full", "macros"] }
toml        = { version = "0.5", features = ["preserve_order"] }
twitchchat  = { version="0.10" }

[build-dependencies]
simple_env_load = "0.1.0"
sqlx        = { version = "0.3", default-features = false, features = ["macros", "sqlite", "runtime-tokio"] }
tokio       = { version = "0.2", features = ["rt-core"] }
