[package]
name = "kappatan"
version = "0.1.0"
authors = ["Benjamin Halsted <bhalsted@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
alto_logger     = { version = "0.3.6", features = ["time"] }
anyhow          = "1.0.32"
futures         = "0.3.5"
log             = "0.4.11"
markings        = "0.4.0"
serde           = { version = "1.0.115", features = ["derive"] }
simple_env_load = "0.1.0"
sqlx            = { version = "0.3.5", default-features = false, features = ["macros", "sqlite", "runtime-tokio"] }
thiserror       = "1.0.20"
tokio           = { version = "0.2.22", features = ["full", "macros"] }
twitchchat      = { version = "0.12.0-alpha.0", features = ["tokio", "tokio-util"] }

[build-dependencies]
simple_env_load = "0.1.0"
sqlx            = { version = "0.3.5", default-features = false, features = ["macros", "sqlite", "runtime-tokio"] }
tokio           = { version = "0.2.22", features = ["rt-core"] }
